--- a/.gitignore
+++ b/.gitignore
@@ -272,6 +272,8 @@ Generated_Code/
 # because we have git ;-)
 _UpgradeReport_Files/
 Backup*/
+!DocQL/Components/Backup/
+!DocQL/Components/Backup/*.razor
 UpgradeLog*.XML
 UpgradeLog*.htm
 ServiceFabricBackup/
@@ -416,3 +418,4 @@ FodyWeavers.xsd
 *.msix
 *.msm
 *.msp
+
